# PTNexus

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.json  Dockerfile  readme.md
.githooks/: pre-commit
.github/workflows/: build.yml
desktop/: .gitignore  README.md  package.json
desktop/scripts/: build-windows-installer-linux.sh  build-windows.ps1
desktop/src/: index.html  main.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/nsis/: installer-hooks.nsh
desktop/src-tauri/src/: lib.rs  main.rs  runtime.rs
desktop/templates/: runtime.env.example
proxy/: bdinfo.go  install-pt-nexus-box-proxy.sh  proxy.go
server/: app.py  config.py  database.py  database_migrations.py  sites_data.json
server/api/: routes_cross_seed_data.py  routes_go_proxy.py  routes_management.py  routes_migrate.py
server/configs/: global_mappings.yaml  ilolicon.yaml  ptlover.yaml  rousi.yaml
server/core/: ratio_speed_limiter.py  services.py
server/core/bdinfo/: bdinfo_manager.py
server/core/uploaders/sites/: rousi.py
server/utils/: mediainfo.py  screenshot.py
updater/: updater.go
webui/src/: App.vue
webui/src/components/: CrossSeedPanel.vue
webui/src/components/settings/: DownloaderSettings.vue  GeneralSettings.vue  SitesSettings.vue
webui/src/stores/: torrentsViewState.ts
webui/src/views/: CrossSeedDataView.vue  SettingsView.vue  TorrentsView.vue
wiki/docs/: index.md
